--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 		<title>Speech To Text</title>
 	</head>
 	<body>
-		<h1></h1>
+		<h1>Reconhecimento de Voz</h1>
 		<form>
-			<input type="textarea" name="transcript" >
-			<a>
-				<img>
+			<input type="textarea" name="transcript" class="textbox">
+			<a id="microphone" href="#" target="_self">
+				<img src="mic.png" alt="Microphone">
 			</a>
-			<label></label>
+			<label>Clique no ícone do microfone e comece a falar o quanto quiser.</label>
 		</form>
 	</body>
 </html>
