--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<h1>Reconhecimento de Voz</h1>
 		<form>
-			<input type="textarea" name="transcript" class="textbox">
+			<textarea id="textbox" name="transcript" rows="25" cols="25" maxlength="1200" style="resize: none;"></textarea>
 			<a id="microphone" href="#" target="_self">
 				<img src="mic.png" alt="Microphone">
 			</a>
